# animal_game

./: .gitignore  Makefile  README.md  pyproject.toml
game/: animal_node.py  app.py
game/domain/: animal_node.py
